--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   audio_video_progress_bar: ^2.0.2
   cloud_firestore: ^4.17.3
   share_plus: ^9.0.0
+  just_audio_background: ^0.0.1-beta.12
 
 dev_dependencies:
   flutter_test:
