--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,15 +35,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  firebase_core: ^2.31.0
+  firebase_core: ^3.0.0
   http: ^1.2.1
   rxdart: ^0.27.7
   just_audio: ^0.9.37
   audio_video_progress_bar: ^2.0.2
-  cloud_firestore: ^4.17.3
+  cloud_firestore: ^5.0.0
   share_plus: ^9.0.0
   just_audio_background: ^0.0.1-beta.12
   collection: ^1.18.0
+  firebase_storage: ^12.0.0
+  image_picker: ^1.1.2
+  firebase_auth: ^5.0.0
+  google_sign_in: ^6.2.1
+  diacritic: ^0.1.5
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +74,7 @@ flutter:
   assets:
     - assets/songs.json
     - assets/itunes.jfif
+    - assets/google.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
